kubeadm/docker/efk/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: logging
  labels:
    app.kubernetes.io/name: logging
    app.kubernetes.io/instance: logging-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: elasticsearch.hanium-devops.site
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
  - host: kibana.hanium-devops.site
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-svc
          servicePort: 80
